--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "author": "Karega McCoy",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts": "^3.4.2",
     "@truffle/hdwallet-provider": "^2.0.14",
     "@trufflesuite/bigint-buffer": "^1.1.10",
-    "@uniswap/v3-core": "https://github.com/Uniswap/v3-core.git#0.8",
-    "@uniswap/v3-periphery": "https://github.com/Uniswap/v3-periphery.git#0.8",
+    "@uniswap/v3-core": "https://github.com/Uniswap/v3-core.git#main",
+    "@uniswap/v3-periphery": "https://github.com/Uniswap/v3-periphery.git#main",
     "dotenv": "^16.0.2",
     "operator-filter-registry": "^1.3.1",
     "prettier": "^2.7.1",
