--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.2",
+    "@truffle/hdwallet-provider": "^2.1.9",
     "@uniswap/v3-core": "https://github.com/Uniswap/v3-core.git#main",
     "@uniswap/v3-periphery": "https://github.com/Uniswap/v3-periphery.git#main",
+    "dotenv": "^16.0.3",
     "operator-filter-registry": "^1.3.1",
     "prettier": "^2.7.1",
-    "truffle-plugin-verify": "^0.5.28"
+    "truffle-plugin-verify": "0.6.2"
   },
   "scripts": {
     "compile": "truffle compile -all",
