--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "trailingComma": "es5",
     "useTabs": false,
     "printWidth": 200
+  },
+  "devDependencies": {
+    "eth-gas-reporter": "^0.2.25"
   }
 }
